# face_recognition_ultra_light

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
faces/: emotion.py  recorder.py  training.py
faces/embeddings/: embeddings.pkl
launch/: face_recognition_ultra_light.launch  uvc_face_recognition_ultra_light.launch
msg/: EmotionInput.msg  EmotionOutput.msg
scripts/: caleb_mqtt_test.py  emotion_recognition.py  face_detection.py  face_distance.py  mqtt_emotion_subscriber.py  mqtt_publisher.py  mqtt_subscriber.py  test_emotion_parse.py
src/: compressed_image_viewer.cpp
